Formatting all source files - 'mvn java-formatter:format'.